# Cplusplus-inventory-system

./: .clang-format  .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  api_documentation.md  config.json  config_production.json  docker-compose.yml  inventory.db  main.cc  run_server.sh  run_validation_tests.sh  sample_data.sql  schema.sql  simple_main.cc  validation.cc  validation.h
.github/workflows/: build.yml  ci.yml  deploy.yml
controllers/: ProductsController.cc  ProductsController.h  PurchaseOrdersController.cc  PurchaseOrdersController.h  SuppliersController.cc  SuppliersController.h  WarehousesController.cc  WarehousesController.h
db/: dbinit.cc  dbinit.h
middleware/: CMakeLists.txt  ValidationMiddleware.h  client_test.cc  simple_test  simple_test.cc  simple_validation_test  simple_validation_test.cc  validatMiddlewareTest.cc  validationMiddleware.cc
models/: Products.cc  Products.h  PurchaseOrder.cc  PurchaseOrder.h  PurchaseOrders.cc  PurchaseOrders.h  Supplier.cc  Supplier.h  Suppliers.cc  Suppliers.h  Warehouse.cc  Warehouse.h  Warehouses.cc  Warehouses.h  model.json
scripts/: server-setup.sh
test/: CMakeLists.txt  test_main.cc
views/: create_product.csp  index.csp
